# alphafold3_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
alphafold3tools/: __init__.py  __main__.py  cli.py  fastatojson.py  ipsae.py  jsontomsa.py  metrics.py  mmcif_parser.py  modjson.py  msa_conversion.py  msatojson.py  output.py  paeplot.py  sdftoccd.py  searchtemplates.py  structure_stores.py  superpose_ciffiles.py  test.py  utils.py
alphafold3tools/structure/: mmcif_parser.py  mmcif_utils.py
testfiles/: 1bjp.a3m  1bjp_6.a3m  1bjp_no_header.a3m  2z9g.a3m  Q9I1F6-F1-msa_v6.a3m  orf5.a3m  orobanchol.cif  orobanchol.sdf  ras.a3m  read_data.json  sampleafdbpae.json  testcomplexseqs.a3m  testheterocomplex.json
testfiles/ipsae/: RAF1_KSR1_MEK1_9f755_unrelaxed_af2mv3_model_1_s_0_15_15.json.orig  RAF1_KSR1_MEK1_9f755_unrelaxed_af2mv3_model_1_s_0_15_15.pml.orig  RAF1_KSR1_MEK1_9f755_unrelaxed_af2mv3_model_1_s_0_15_15.txt.orig  tlxi_tlxi_model_10_10.pml.orig  tlxi_tlxi_model_10_10_byres.txt.orig
testfiles/ipsae/af2/: af2test_unrelaxed_rank_001_alphafold2_multimer_v3_model_1_seed_000_10_10.json  af2test_unrelaxed_rank_001_alphafold2_multimer_v3_model_1_seed_000_15_15.json.orig  af2test_unrelaxed_rank_001_alphafold2_multimer_v3_model_1_seed_000_15_15.txt.orig  af2test_unrelaxed_rank_001_alphafold2_multimer_v3_model_1_seed_000_15_15_byres.txt.orig
testfiles/ipsae/af3/: tlxi_tlxi_confidences.json  tlxi_tlxi_model.cif  tlxi_tlxi_model_10_10.json.orig  tlxi_tlxi_model_10_10.txt.orig  tlxi_tlxi_summary_confidences.json
testfiles/mmcif_files/: 4ZZ4.cif  6W81.cif
testfiles/seqres/: test_pdb_seqres.txt
tests/: test_cli.py  test_fastatojson.py  test_ipsae.py  test_jsontomsa.py  test_metrics.py  test_mmcif_utils.py  test_modjson.py  test_msaconversion.py  test_msatojson.py  test_templates.py
