[project]
name = "alphafold3_tools"
version = "0.4.0"
description = "Toolkit for alphafold3 input and output files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["biopython>=1.85", "rdkit>=2024.3.2", "gemmi>=0.7.5", "matplotlib", "pip", "loguru"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-2-Clause"
authors = [
  {name = "Yoshitaka Moriwaki", email = "moriwaki.yoshitaka@tmd.ac.jp"},
]

[tool.ruff]
indent-width = 4
line-length = 88 # Same as Black.
exclude = [".ruff_cache", ".ruff.toml", ".ruff.lock"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W", # warning
]
ignore = ["F401", "E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Jupyter is migrating.*:DeprecationWarning",
]
addopts = "-vv --color=yes --capture=no"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.29",
    "notebook>=7.2.2",
    "pandas>=3.0.2",
    "pytest>=8.3.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.10",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[tool.hatch.metadata]
dynamic = ["name", "version"]

[tool.hatch.build.targets.wheel]
packages = ["alphafold3tools"]

[project.scripts]
af3tools = 'alphafold3tools.cli:main'

[project.urls]
Homepage = "https://github.com/cddlab/alphafold3_tools"
Issues = "https://github.com/cddlab/alphafold3_tools/issues"
